# comet

./: .gitignore  license.md  meson.build
include/comet/: base.hpp  external.hpp  hello.hpp  pch.hpp  types.hpp
include/comet/graphics/: index_buffer.hpp  renderer.hpp  shader.hpp  vertex_array.hpp  vertex_buffer.hpp  window.hpp
include/comet/graphics/primitives/: index_buffer.hpp  shader.hpp  vertex_array.hpp  vertex_buffer.hpp
include/comet/mathematics/: matrix.hpp
source/comet/: hello.cpp
source/comet/graphics/: index_buffer.cpp  renderer.cpp  shader.cpp  vertex_array.cpp  vertex_buffer.cpp  window.cpp
source/comet/graphics/primitives/: index_buffer.cpp  shader.cpp  vertex_array.cpp  vertex_buffer.cpp
source/comet/mathematics/: matrix.cpp
test/sandbox/: meson.build
test/sandbox/source/: main.cpp
tools/: .clang-format  .clang-format-ignore  .format.py  format.sh  formatted.diff
